welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:24: error: not found: value faire
def ligneUn() {for (b <- 1 to 9) { faire Motif() } ; recule(44)}
                                   ^