welcome.lessons.welcome.methods.picture.PictureMono3.scala.code
override def run() {
def faireV() {
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	droite()
	avance()
	baisseBrosse()
	leveBrosse()
	avance()
	droite()
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
}
def faireMotif() { for (a<- 1 to 4) {faireV()}
avance(5)}
def ligneUn() {for (b <- 1 to 9) { faire Motif() } ; recule(44)}


}
